--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,8 +2,14 @@
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("../../home2.jpg");
+    url("../../home3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+.course-header {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
